<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fondo4"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@mipmap/ic_icono_asteroids" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/titleApp"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button5"
            style="@style/ButtonStyleCalculator"
            android:text="@string/Arrancar" />

        <Button
            android:id="@+id/button6"
            style="@style/ButtonStyleCalculator"
            android:text="@string/Configurar" />

        <Button
            android:id="@+id/button7"
            style="@style/ButtonStyleCalculator"
            android:text="@string/Acercade" />

        <Button
            android:id="@+id/button8"
            style="@style/ButtonStyleCalculator"
            android:text="@string/Score" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>